--- a/src/app/employees-manage-dash/employees-manage-dash.component.html
+++ b/src/app/employees-manage-dash/employees-manage-dash.component.html
@@ -59,7 +59,7 @@
                                         </mat-form-field>
                                     </div>
                                 </div> -->
-                                <div class="col-4">
+                                <div class="col-3">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
                                             <mat-label>מספר טלפון</mat-label>
@@ -68,7 +68,7 @@
                                         </mat-form-field>
                                     </div>
                                 </div>
-                                <div class="col-4">
+                                <div class="col-3">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
                                             <mat-label>פעיל</mat-label>
@@ -84,7 +84,7 @@
                                         </mat-form-field>
                                     </div>
                                 </div>
-                                <div class="col-4">
+                                <div class="col-3">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
                                             <mat-label>בוגר לימודי רפואה</mat-label>
@@ -94,6 +94,22 @@
                                                     כן
                                                 </mat-option>
                                                 <mat-option value="2">
+                                                    לא
+                                                </mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="form-group lh-37">
+                                        <mat-form-field>
+                                            <mat-label>מאושר ממשאבי אנוש</mat-label>
+                                            <mat-select formControlName="StatusRow">
+                                                <mat-option value="2">הכל</mat-option>
+                                                <mat-option value="1">
+                                                    כן
+                                                </mat-option>
+                                                <mat-option value="0">
                                                     לא
                                                 </mat-option>
                                             </mat-select>
