--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.css
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.css
@@ -3,7 +3,6 @@ select{
     background: lightgrey;
     padding: 6px 10px 6px 0px;
     width: 130px;
-    float: left;
     margin-top: 10px;
     border-radius: 5px;
     margin-right: 75px;
@@ -36,5 +35,5 @@ mat-list{
     width: 101%;
 }
 .wrapper{
-    background-color: gray;
+    overflow: auto;
 }
