--- a/src/app/hospital-bi-dashboard/bar-chart/bar-chart.component.html
+++ b/src/app/hospital-bi-dashboard/bar-chart/bar-chart.component.html
@@ -2,6 +2,7 @@
    [type]="type"
    [data]="data"
    [options]="options"
+   [columns]="columnNames"
    [width]="width"
    [height]="height">
 </google-chart>
