--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="col-6 text-right">
             <select class="form-select" style="margin-right: 26%;"
-                (change)="getTimeType($event.target.value); pie.refresh($event.target.value); bar.refresh($event.target.value); groupedbar.refresh($event.target.value); line.refresh($event.target.value);">
+                (change)="pie.refresh($event.target.value); bar.refresh($event.target.value); groupedbar.refresh($event.target.value); line.refresh($event.target.value);">
                 <option *ngFor="let time of timeLine" [value]="time.DimTimeTypeID">{{time.DimTimeTypeDesc}}
                 </option>
             </select>
