--- a/src/app/nurses-dashboard/share-reports-dialog.html
+++ b/src/app/nurses-dashboard/share-reports-dialog.html
@@ -1,24 +1,29 @@
 <mat-card dir="rtl" class="full-width text-center pb-0 mb-3">
     <div class="row">
-        <div class="col-6">
+        <div class="col-12">
             <label style="font-size: 20px;">שליחת דוחות לנמענים</label>
         </div>
-        <div class="col-5">
+    </div>
+    <div class="row" style="margin: 15px 0px 15px 0px;" [formGroup]="mail">
+        <div class="col-12">
+           <textarea style="width: 100%;border-radius: 10px;" rows="3" placeholder="נושא/הערה" formControlName="mailSubject"></textarea> 
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-9">
             <form class="example-form">
                 <mat-form-field class="example-full-width">
-                    <mat-label>שליחה לנמען</mat-label>
-                    <input type="text" aria-label="manager" matInput
-                        [formControl]="myControl" [matAutocomplete]="auto">
+                    <mat-label>בחירת נמענים</mat-label>
+                    <input type="text" aria-label="manager" matInput [formControl]="myControl" [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                        <mat-option *ngFor="let option of filteredOptions | async"
-                            [value]="option">
-                            {{option.name}}
+                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                            {{option.FirstName}} {{option.LastName}}
                         </mat-option>
                     </mat-autocomplete>
                 </mat-form-field>
             </form>
         </div>
-        <div class="col-1">
+        <div class="col-3">
             <button mat-raised-button [disabled]="disableBtn" class="btn btn-primary btn-raised float-left"
                 (click)="shareReportWithOthers()" matTooltip="שליחה">
                 <span class="material-icons">
@@ -27,5 +32,7 @@
             </button>
         </div>
     </div>
+
+
 
 </mat-card>
