--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -137,10 +137,10 @@
                                     </span>
                                 </button>
                                 &nbsp;&nbsp;
-                                <button matTooltip="שליחה לנמען" mat-raised-button type="button"
+                                <button matTooltip="שליחת דיווח למייל" mat-raised-button type="button"
                                     class="btn btn-primary btn-raised" (click)="openShareDialog()">
                                     <span class="material-icons">
-                                        reply
+                                        mail
                                     </span>
                                 </button>
                             </form>
