--- a/src/app/nurses-dashboard/share-reports-dialog.html
+++ b/src/app/nurses-dashboard/share-reports-dialog.html
@@ -14,8 +14,19 @@
             <form class="example-form">
                 <mat-form-field class="example-full-width">
                     <mat-label>בחירת נמענים</mat-label>
-                    <input type="text" aria-label="manager" matInput [formControl]="myControl" [matAutocomplete]="auto">
-                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                    <!-- <input type="text" aria-label="manager" matInput [formControl]="myControl" [matAutocomplete]="auto"> -->
+                    <mat-chip-list #chipList aria-label="Fruit selection">
+                        <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable" [removable]="removable"
+                            (removed)="remove(fruit)">
+                            {{fruit.FirstName}} {{fruit.LastName}}
+                            <mat-icon matChipRemove>cancel</mat-icon>
+                        </mat-chip>
+                        <input placeholder="בחר אחראי מהרשימה" #fruitInput [formControl]="myControl"
+                            [matAutocomplete]="auto" [matChipInputFor]="chipList"
+                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                            (matChipInputTokenEnd)="add($event)">
+                    </mat-chip-list>
+                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
                         <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
                             {{option.FirstName}} {{option.LastName}}
                         </mat-option>
@@ -26,8 +37,8 @@
         <div class="col-3">
             <button mat-raised-button [disabled]="disableBtn" class="btn btn-primary btn-raised float-left"
                 (click)="shareReportWithOthers()" matTooltip="שליחה">
-                <span class="material-icons">
-                    reply
+                <span style="transform: rotate(180deg);" class="material-icons">
+                    send
                 </span>
             </button>
         </div>
