--- a/src/app/hospital-bi-dashboard/grouped-bar-chart/grouped-bar-chart.component.html
+++ b/src/app/hospital-bi-dashboard/grouped-bar-chart/grouped-bar-chart.component.html
@@ -1,8 +1,4 @@
-<google-chart #chart
-   [type]="type"
-   [data]="data"
-   [columns]="columnNames"
-   [options]="options"
-   [width]="width"
-   [height]="height">
+<mat-spinner *ngIf="loader"></mat-spinner>
+<google-chart #chart *ngIf="!loader" [type]="type" [data]="data" [columns]="columnNames" [options]="options"
+   [width]="width" [height]="height">
 </google-chart>
