--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.css
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.css
@@ -35,7 +35,8 @@ mat-list{
     width: 101%;
 }
 .wrapper{
-    overflow: auto;
+    overflow-x: hidden;
+    padding-bottom: 100px;
 }
 .mat-radio-button {
     margin-left: 16px;
