--- a/src/app/mersham/mersham.component.css
+++ b/src/app/mersham/mersham.component.css
@@ -19,8 +19,9 @@
     border-radius: 4px 4px 0 0;
     padding: 0.1em 0.1em 0 0.1em;
 }
-.form-control {
+.form-control:not(textarea):not(.text) {
     height: 35px;
+    width: 100%;;
 }
 .search-input {
     direction: rtl;
