--- a/src/app/mersham/mersham.component.html
+++ b/src/app/mersham/mersham.component.html
@@ -1075,21 +1075,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <mat-form-field floatLabel="always">
-                                <input
-                                    matInput
-                                    id="diagnosis"
-                                    autocomplete="off"
-                                    class="form-control"
-                                    placeholder="אבחנה"
-                                    formControlName="diagnosisVal"
-                                    type="text"
-                                />
-                            </mat-form-field>
-                        </div>
-                    </div>
+                    
                     <div class="col">
                         <div class="form-group">
                             <mat-form-field floatLabel="always">
@@ -1154,6 +1140,24 @@
                                     [for]="takedateIN"
                                 ></mat-datepicker-toggle>
                                 <mat-datepicker #takedateIN></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <mat-form-field floatLabel="always">
+                                <textarea
+                                    matInput
+                                    id="diagnosis"
+                                    autocomplete="off"
+                                    class="form-control"
+                                    placeholder="אבחנה"
+                                    formControlName="diagnosisVal"
+                                    type="text"
+                                    rows="5"
+                                ></textarea>
                             </mat-form-field>
                         </div>
                     </div>
@@ -1425,7 +1429,7 @@
                                                     )
                                                 "
                                                 formControlName="finalMenonVal"
-                                                type="number"
+                                                type="text"
                                                 value="{{
                                                     element.finalMenonVal
                                                 }}"
@@ -2155,14 +2159,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
-                    <div class="form-group">
-                        <label>אבחנה</label>
-                        <span class="form-control">{{
-                            printForm.diagnosisVal
-                        }}</span>
-                    </div>
-                </div>
+                
                 <div class="col">
                     <div class="form-group">
                         <label>פרוטוקול טיפול</label>
@@ -2194,6 +2191,18 @@
                             printForm.takedateIN
                         }}</span>
                     </div>
+                </div>
+            </div>
+            <div class="row text-right" dir="rtl">
+                <div class="col">
+                    <label>אבחנה</label>
+                    <div class="form-group">
+                        
+                        <p class="form-control text">{{
+                            printForm.diagnosisVal
+                        }}</p>
+                    </div>
+                   
                 </div>
             </div>
         </div>
