--- a/src/app/nurses-department-manage/nurses-department-manage.component.html
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.html
@@ -141,10 +141,10 @@
             style="background: lawngreen;" (click)="ngOnInit()">
             <i class="material-icons">refresh</i>
           </button>
-          <button matTooltip="חזרה לאחות כללית" id="EventBtndisplay" *ngIf="UserName == 'nibrahim'" mat-raised-button
+          <!-- <button matTooltip="חזרה לאחות כללית" id="EventBtndisplay" *ngIf="UserName == 'nibrahim'" mat-raised-button
             type="submit" class="btn btn-primary btn-raised" (click)="test()">
             <i class="material-icons">face</i>
-          </button>
+          </button> -->
         </div>
         <div class="col text-right" style="display: inline-flex;justify-content: right;">
           <button mat-raised-button type="submit" class="btn btn-primary btn-raised" id="btnDepts"
