--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -183,10 +183,10 @@
                                 apps
                             </span>
                         </button></li>
-                    <li><button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'jubartal'"
+                    <!-- <li><button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'jubartal'"
                             mat-raised-button type="submit" class="btn btn-raised" (click)="test()">
                             <i class="material-icons">face</i>
-                        </button></li>
+                        </button></li> -->
                 </ul>
             </div>
             <div class="col-4 text-center">
