--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -2,7 +2,7 @@
     <h1 class="page-title text-center">{{choosenDept.DIMDataTypeDesc}}</h1>
     <div class="row head-row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align-last: center;">
-            <button mat-button [matMenuTriggerFor]="menu" class="depts-list-menu">מחלקות</button>
+            <button mat-button [matMenuTriggerFor]="menu" class="depts-list-menu">תחומים</button>
             <mat-menu #menu="matMenu">
                 <button *ngFor="let dept of departments" (click)="chooseDataType(dept)" mat-menu-item
                     color="primary">{{dept.DIMDataTypeDesc}}</button>
