--- a/src/app/maternitypatients/maternitypatients.component.html
+++ b/src/app/maternitypatients/maternitypatients.component.html
@@ -179,6 +179,30 @@
                                         </button>
                                     </div>
                                 </td>
+                            </ng-container><ng-container matColumnDef="Delete">
+                                <th
+                                    mat-header-cell
+                                    *matHeaderCellDef
+                                    width="50"
+                                >
+                                    עריכה
+                                </th>
+                                <td mat-cell *matCellDef="let element">
+                                    <div class="example-button-container">
+                                        <button
+                                            (click)="
+                                            deletePatient(
+                                                    element
+                                                )
+                                            "
+                                            class="row-data"
+                                            mat-mini-fab
+                                            color="warn"
+                                        >
+                                            <mat-icon>delete_forever</mat-icon>
+                                        </button>
+                                    </div>
+                                </td>
                             </ng-container>
                             <tr
                                 mat-header-row
