--- a/src/app/maternitypatients/maternitypatients.component.html
+++ b/src/app/maternitypatients/maternitypatients.component.html
@@ -185,7 +185,7 @@
                                     *matHeaderCellDef
                                     width="50"
                                 >
-                                    עריכה
+                                    מחיקה
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     <div class="example-button-container">
