--- a/src/app/hospital-bi-dashboard/pie-chart/pie-chart.component.html
+++ b/src/app/hospital-bi-dashboard/pie-chart/pie-chart.component.html
@@ -1,7 +1,3 @@
-<google-chart #chart
-   [type]="type"
-   [data]="data"
-   [options]="options"
-   [width]="width"
-   [height]="height">
+<mat-spinner *ngIf="loader"></mat-spinner>
+<google-chart #chart *ngIf="!loader" [type]="type" [data]="data" [options]="options" [width]="width" [height]="height">
 </google-chart>
