--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -40,7 +40,7 @@
             </mat-radio-group>
         </div>
     </div>
-    <div class="row" *ngIf="departParam == '1' || departParam == '7'">
+    <div class="row" *ngIf="(departParam == '1' || departParam == '7') && UserName == 'adahabre'">
         <mat-card class="example-card text-center">
             <mat-card-title-group style="justify-content: center;">
                 <div class="text-center">
