--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -41,7 +41,7 @@
             </mat-radio-group>
         </div>
     </div>
-    <div class="row" *ngIf="UserName == 'adahabre'">
+    <div class="row">
         <mat-card class="example-card text-center" *ngFor="let card of cardsList">
             <mat-card-title-group style="justify-content: center;">
                 <div class="text-center">
