--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -39,6 +39,15 @@
                 <mat-radio-button value="0">סיעודי</mat-radio-button>
                 <mat-radio-button value="1">רפואי</mat-radio-button>
             </mat-radio-group>
+            <section class="example-section">
+                <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="returnedPatients">אשפוזים חוזרים</mat-checkbox>
+              </section>
+        </div>
+        <div *ngIf="departParam == '7'" class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
+            style="text-align-last: center;" [formGroup]="deliveryPrematureGroup">
+            <section class="example-section" *ngIf="UserName == 'adahabre'">
+                <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="deliveryPremature">פגיה</mat-checkbox>
+              </section>
         </div>
     </div>
     <div class="row">
@@ -148,7 +157,7 @@
                         <mat-radio-group formControlName="surgeryChooseType" aria-label="Select an option"
                             (change)="changeSurgeryType()">
                             <mat-radio-button value="0">משמרת</mat-radio-button>
-                            <mat-radio-button value="1">קטיגוריה</mat-radio-button>
+                            <mat-radio-button value="1">קטגוריה</mat-radio-button>
                         </mat-radio-group>
                     </div>
                 </div>
