--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
@@ -20,6 +20,10 @@ h4{
   z-index: 1;
 }
 
+.apps-line{
+  border: 1px solid darkgrey;
+}
+
 .card-body,.other-cards,.card.dash-cards{
   font-weight: bolder;
   font-size: 18px;
