--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -45,7 +45,7 @@
         </div>
         <div *ngIf="departParam == '7'" class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
             style="text-align-last: center;" [formGroup]="deliveryPrematureGroup">
-            <section class="example-section" *ngIf="UserName == 'adahabre'">
+            <section class="example-section">
                 <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="deliveryPremature">פגיה</mat-checkbox>
               </section>
         </div>
