--- a/src/app/galit-points-report/galit-points-report.component.css
+++ b/src/app/galit-points-report/galit-points-report.component.css
@@ -13,13 +13,13 @@
     font-size: 14px;
     width: 100%;
   }
-  #printmycontent td.mat-cell{
+  /* #printmycontent td.mat-cell{
     padding: 10px !important;
     font-weight: bold;
     text-align: center;
     overflow-wrap: break-word;
     border: 1px solid black;
-  }
+  } */
   [dir="rtl"] td.mat-cell:first-of-type{
     padding: 10px !important;
     font-weight: bold;
@@ -31,16 +31,18 @@
     color: black;
   }
   @media print {
-    table{
+    /* table{
       width: 100%;
       table-layout: fixed;
       border-spacing: 0px;
     }
-    td.mat-cell{
+     */
+    /* #printmycontent td.mat-cell{
       padding: 10px !important;
       font-weight: bold;
       background-color: white;
       text-align: center;
       border: 1px solid black;
-    }
+    } */
+    
  }
