--- a/src/app/nurses-department-manage/nurses-department-manage.component.html
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.html
@@ -1,9 +1,21 @@
 <div class="my-container" id="page-toshow">
   <div class="row" dir="rtl">
-    <div style="margin-left: auto;">
-      <h4>שם משתמש: {{UserName}}</h4>
+    <div class="row" style="text-align-last: center;width: 100%;">
+      <!-- <div class="col-2">
+        <span class="material-icons" id="navigate-icon-next" matTooltip="יום אחרי" (click)="displayDateNavigate('next')" *ngIf="dateToDisplayString != myDate">
+          navigate_next
+        </span>
+      </div> -->
+      <div class="col-12">
+        <h4>שם משתמש: {{UserName}}</h4>
+      </div>
+      <!-- <div class="col-2">
+        <span class="material-icons" id="navigate-icon-before" matTooltip="יום לפני" (click)="displayDateNavigate('before')">
+          navigate_before
+        </span>
+      </div> -->
     </div>
-    <div>
+    <div *ngIf="ifAdmin == '0'">
       <button *ngIf="departCode == 'סטנ-ילד'" style="margin-left: 10px;" matTooltip="שינוי למח' ילדים" mat-raised-button
         type="submit" (click)="changeDepartByUser('סילד','ילדים')" class="btn btn-primary btn-raised">
         ילדים
@@ -36,7 +48,7 @@
 
         </div>
         <div class="col">
-          <h4 style="font-size: 25px;"><b>{{Dept_Name}}</b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+          <h4 style="font-size: 25px;"><b>{{Dept_Name}}</b>  -  {{myDate | date: "dd.MM.yyyy"}}</h4>
         </div>
         <div class="col">
           <button style="float: right;" matTooltip="דף הבית" *ngIf="ifAdmin == '0'" mat-raised-button type="submit"
