--- a/src/app/infection-report/infection-report.component.html
+++ b/src/app/infection-report/infection-report.component.html
@@ -98,6 +98,10 @@
         <div dir="rtl" class="col">
             <div class="table-responsive">
                 <div class="table-spinner-container">
+                    <mat-form-field appearance="standard">
+                        <mat-label>חפש</mat-label>
+                        <input matInput (keyup)="applyFilter($event)" placeholder="חפש" #input>
+                      </mat-form-field>
                     <table
                         class="table table-striped table-responsive-md"
                         matSort
@@ -140,6 +144,12 @@
                                 {{ element.DrugName }}
                             </td>
                         </ng-container>
+                        <ng-container matColumnDef="PrescribedDrugDose">
+                            <th mat-header-cell *matHeaderCellDef>מינון</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.PrescribedDrugDose  | number : '1.2-2'}}
+                            </td>
+                        </ng-container>
                        
 
                         <ng-container matColumnDef="Height">
@@ -164,6 +174,22 @@
                             </th>
                             <td mat-cell *matCellDef="let element">
                                 {{ element.BMI }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="GFR">
+                            <th mat-header-cell *matHeaderCellDef>
+                                GFR
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.GFR }}
+                            </td>
+                        </ng-container>
+                        <ng-container matColumnDef="Creatinine">
+                            <th mat-header-cell *matHeaderCellDef>
+                                Creatinine
+                            </th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.Creatinine }}
                             </td>
                         </ng-container>
                         
