--- a/src/app/updateform/updateform.component.html
+++ b/src/app/updateform/updateform.component.html
@@ -112,6 +112,7 @@
         <div class="card-header border-bottomIn rel">
             <img class="full-width" src="assets/images/covid_2_header.png" />
             <h2 class="text-center pos-abs-center">{{rowFormData.FormName}}</h2>
+            <h2 class="text-center pos-abs-center" style="top: 100px;">{{rowFormData.DateOfFillForm}}</h2>
         </div>
         <div class="card-body pd-10">
             <div class="row-1">
