--- a/src/app/employees-manage-dash/employees-add-update/employees-add-update.component.html
+++ b/src/app/employees-manage-dash/employees-add-update/employees-add-update.component.html
@@ -284,8 +284,8 @@
                                 <span *ngIf="_switchHTOK == '1'">מאושר משאבי אנוש</span>
                             </mat-button-toggle>
                             <div style="align-self: center;margin-right: 2%;">
-                                <mat-checkbox class="example-margin" [(ngModel)]="AcceptTerms" (change)="acceptTermsFunc()"
-                                    [ngModelOptions]="{standalone: true}">חתם על תנאים</mat-checkbox>
+                                <span *ngIf="AcceptTerms == '1'">חתם על טופס סודיות</span>
+                                <span *ngIf="AcceptTerms == '0'">לא חתם על טופס סודיות</span>
                             </div>
                         </div>
                         <!-- <div class="full-width row">
